--- a/main/templates/main/_two_action_form.html
+++ b/main/templates/main/_two_action_form.html
@@ -109,6 +109,6 @@
     <input class="test-input" placeholder="Номер телефона">
     <textarea class="test-textarea" placeholder="Опишите, чем могу быть полезен"></textarea>
     <p class="test-note">Нажимая на кнопку отправить, вы даете согласие на обработку</br>персональных данных и соглашаетесь с политикой конфиденциальности</p>
-    <button class="test-submit">Оставить заявку</button>
+    <button class="test-submit">Отправить заявку</button>
   </div>
 </div>
