--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -8,7 +8,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/gh/Sean-93/newmarquee@v0.9.1/dist/newmarquee-min.js"></script>
     <link rel="stylesheet" href="{% static 'css/main.css' %}?v={{ CSS_VERSION }}">
     <link rel="stylesheet" href="{% static 'main/css/home.css' %}?v={{ CSS_VERSION }}">
 </head>
@@ -1045,24 +1044,69 @@
                         </div>
                     </div>
                 </section>
-                <section>
-                    <div class="marquee">
-                        <new-marquee speed="40" direction="right" pauseonhover="true">
-                            <div style="display: flex; align-items: center;">
-                                <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
-                                <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
-                                <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
-                                <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
-                                <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
-                                <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
-                                <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
-                                <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
-                                <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
-                                <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
-                            </div>
-                        </new-marquee>
-                    </div>
-                </section>
+            </main>
+        </div>
+    </div>
+    <div class="wrapper marquee-wrapper">
+        <div class="marquee">
+            <div class="marquee-content">
+                <div class="marquee-track">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                </div>
+                <div class="marquee-track" aria-hidden="true">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                </div>
+                <div class="marquee-track" aria-hidden="true">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                    <img src="{% static 'main/img/partner1.svg' %}" alt="" class="partners-img">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="wrapper">
+        <div class="container">
+            <main>
                 <section>
                     {% include 'main/_action_form.html' %}
                 </section>
@@ -1290,24 +1334,6 @@ document.addEventListener('DOMContentLoaded', () => {
         if (moveX < -50 && index < items.length - 1) setActiveSlide(index + 1);
         if (moveX > 50 && index > 0) setActiveSlide(index - 1);
     });
-});
-
-
-customElements.whenDefined('new-marquee').then(() => {
-  // Находим все элементы new-marquee
-  const marquees = document.querySelectorAll('new-marquee');
-  marquees.forEach(marquee => {
-    // Получаем shadow root
-    const shadow = marquee.shadowRoot;
-    if (shadow) {
-      // Находим контейнер внутри shadow DOM
-      const container = shadow.querySelector('.newmarquee-container');
-      if (container) {
-        // Изменяем стиль
-        container.style.overflow = 'visible';
-      }
-    }
-  });
 });
 
 </script>
