--- a/main/static/main/css/consalting.css
+++ b/main/static/main/css/consalting.css
@@ -167,7 +167,7 @@
 
 .solution-gradient {
     z-index: 1;
-    background: linear-gradient(to bottom, #191826, #030013);
+    background: linear-gradient(to bottom, #141525, #030013);
     width: 100%;
     height: 320px;
     top: 0;
@@ -195,7 +195,7 @@
 }
 
 .solutions-container {
-    margin-top: 70px;
+    padding-top: 70px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: 235px;
@@ -227,7 +227,7 @@
     margin-top: 20px;
     font-family: 'Inter', sans-serif;
     font-weight: 700;
-    font-size: 20px;
+    font-size: 18px;
     line-height: 1.2;
     letter-spacing: -0.011em;
     color: #ffffff;
@@ -2565,5 +2565,23 @@
     .services-back {
         height: 100%;
         object-fit: cover;
+    }
+}
+
+
+@media (max-width: 767px) {
+    .solutions-title {
+        font-size: 32px;
+        line-height: 1.3;
+        text-align: left;
+        padding: 0 10px;
+    }
+}
+
+@media (max-width: 767px) {
+    .solution-item:nth-child(2), .solution-item:nth-child(3) {
+        border-bottom: 1px solid rgba(255, 255, 255, 0.6);
+        border-bottom-left-radius: 24px;
+        border-bottom-right-radius: 24px;
     }
 }
