--- a/main/templates/main/consalting.html
+++ b/main/templates/main/consalting.html
@@ -113,16 +113,22 @@
                             <div class="solution-item">
                                 <img src="{% static 'main/img/ai9.svg' %}" alt="" class="solution-icon">
                                 <p class="solution-title">Строительство</p>
+                                <p class="solution-description">Оптимизация проектных расчётов и контроль хода работ, снижение издержек</br>и рисков срывов сроков</p>
                             </div>
                             <div class="solution-item">
-                                <p class="solution-title">Недвижимость</p>ъ
+                                <div class="solution-spacing"></div>
+                                <p class="solution-title">Недвижимость</p>
+                                <p class="solution-description">Автоматизация оценкм объектов и прогнозирование динамики рынка для принятия взвешенных инвестиционных решений</p>
                             </div>
                             <div class="solution-item">
+                                <div class="solution-spacing"></div>
                                 <p class="solution-title">Продажи</p>
+                                <p class="solution-description">Персонализация предложений, прогнозирование спроса, управление ассортиментом</p>
                             </div>
                             <div class="solution-item">
                                 <img src="{% static 'main/img/ai10.svg' %}" alt="" class="solution-icon">
-                                <p class="solution-title">Продажи</p>
+                                <p class="solution-title">Банкинг</p>
+                                <p class="solution-description">Автоматизация скоринга</br>и антифрод‑мониторинга, обеспечение безопасности операций и точности финансовых решений.</p>
                             </div>
                         </div>
                     </div>
