--- a/main/templates/main/neuro-administration.html
+++ b/main/templates/main/neuro-administration.html
@@ -223,6 +223,7 @@
                             <div class="indicator"></div>
                             <div class="indicator"></div>
                             <div class="indicator"></div>
+                            <div class="indicator"></div>
                         </div>
                         <div class="slider">
                             <div class="slides">
